# Esp32s2NVSTest

./: CMakeLists.txt
Libs/: CMakeLists.txt
Libs/Header/Core/: Config.hpp
Libs/Header/Drivers/: Nvs.hpp
Libs/Source/Core/: Config.cpp
main/: main.cpp  main.h
